# gpgwrap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gpgwrap/: __init__.py  dialogs.py  gpg_service.py  gui.py  install_desktop.py  main.py  models.py
src/gpgwrap/assets/: gpgwrap.desktop
