[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpgwrap"
version = "1.0"
description = "GUI wrapper for system GPG text and file encryption, decryption, signing and verification."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hoek" }
]
dependencies = [
  "PySide6>=6.6"
]

[project.scripts]
gpgwrap = "gpgwrap.main:main"
gpgwrap-install-desktop = "gpgwrap.install_desktop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpgwrap = ["assets/*.png", "assets/*.desktop"]
