[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpgwrap"
version = "1.2"
description = "Linux desktop GUI wrapper for system GPG text and file encryption, decryption, signing and verification."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hoek" }
]
license = { text = "MIT" }
keywords = ["gpg", "pgp", "openpgp", "encryption", "cryptography", "pyside6", "gui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "PySide6>=6.6"
]

[project.urls]
Homepage = "https://github.com/h0ek/gpgwrap"
Repository = "https://github.com/h0ek/gpgwrap"
Issues = "https://github.com/h0ek/gpgwrap/issues"
Releases = "https://github.com/h0ek/gpgwrap/releases"

[project.scripts]
gpgwrap = "gpgwrap.main:main"
gpgwrap-install-desktop = "gpgwrap.install_desktop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpgwrap = ["assets/*.png"]